# rolisteam-diceparser

./: CMakeLists.txt  HelpMe.md  README.md  community_macro.md  dicealias.cpp  parsingtoolbox.cpp
cli/: CMakeLists.txt  main.cpp
include/: parsingtoolbox.h
node/: sortresult.cpp
src/libparser/: CMakeLists.txt  booleancondition.cpp  booleancondition.h  compositevalidator.cpp  dicealias.cpp  diceparser.cpp  diceroller.cpp  die.cpp  die.h  operationcondition.cpp  parsingtoolbox.cpp  validator.cpp  validatorlist.cpp  validatorlist.h
src/libparser/include/diceparser/: dicealias.h  diceparserhelper.h  parsingtoolbox.h
src/libparser/node/: allsamenode.cpp  allsamenode.h  bind.cpp  bind.h  countexecutenode.cpp  dicerollernode.cpp  executionnode.cpp  executionnode.h  explodedicenode.cpp  filternode.cpp  filternode.h  groupnode.cpp  groupnode.h  helpnode.cpp  helpnode.h  ifnode.cpp  jumpbackwardnode.cpp  jumpbackwardnode.h  keepdiceexecnode.cpp  keepdiceexecnode.h  listaliasnode.cpp  listsetrollnode.cpp  listsetrollnode.h  mergenode.cpp  mergenode.h  numbernode.cpp  occurencecountnode.cpp  paintnode.cpp  parenthesesnode.cpp  repeaternode.cpp  replacevaluenode.cpp  rerolldicenode.cpp  roundnode.cpp  roundnode.h  scalaroperatornode.cpp  scalaroperatornode.h  sortresult.cpp  splitnode.cpp  startingnode.cpp  stringnode.cpp  (+6 more)
src/libparser/result/: diceresult.cpp  result.cpp  scalarresult.cpp  stringresult.cpp
src/tests/: CMakeLists.txt
src/tests/dice/: tst_dice.cpp
src/tests/fuzzer/: CMakeLists.txt  run_test.sh  testcase.cpp
tests/dice/: tst_dice.cpp
